--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "pinia": "^2.2.4",
+    "vite-plugin-pwa": "^0.20.5",
     "vue": "^3.5.11",
     "vue-router": "^4.4.5"
   },
